# InsightXpert

./: .env.example  .firebaserc  .gitignore  ANALYST_PROMPT_IMPROVEMENTS.md  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  InsightXpert_Pitch_Deck.pptx  LICENSE  README.md  TODO.md  WALKTHROUGH.md  firebase.json
backend/: .dockerignore  .env.example  Dockerfile  MIGRATION_PLAN.md  alembic.ini  docker-compose.yml  entrypoint.sh  generate_data.py  litestream.yml  pyproject.toml  seed_turso.py
backend/alembic/: env.py
backend/alembic/versions/: 90b5b9c2ba7a_initial_schema_with_all_auth_tables.py
backend/config/: client-configs.json
backend/scripts/: db-restore.sh  migrate_sqlite_to_pg.py  reset_qa_pairs.py
backend/src/insightxpert/: config.py  exceptions.py  main.py
backend/src/insightxpert/admin/: config_store.py  dependencies.py  models.py  routes.py
backend/src/insightxpert/agents/: __init__.py  advanced_agent.py  advanced_tools.py  analyst.py  clarifier.py  common.py  dag_executor.py  deep_think.py  external_db_tools.py  insight.py  orchestrator.py  orchestrator_planner.py  quant_analyst.py  response_generator.py  stat_tools.py  tools.py  (+3 more)
backend/tests/: conftest.py  test_admin_routes.py  test_agent.py  test_api_chat.py  test_clarifier.py  test_conversation_persistence.py  test_conversation_store_admin.py  test_data_loader.py  test_datasets.py  test_db.py  test_db_connector_dialect.py  test_error_scenarios.py  test_external_databases.py  test_migrations.py  test_orchestrator_integration.py  test_prompts.py  test_rag.py  test_statistician.py  test_validate_plan.py
(+202 files in other folders)
